@@ -3,7 +3,6 @@ from plone.registry.interfaces import IRegistry
 from zope.component import getGlobalSiteManager
 from zope.component import getUtility
 from zope.component import queryUtility
-
 from zope.component.hooks import getSite
 from Products.CMFCore.utils import getToolByName
 from collective.xmpp.core.client import AdminClient
@@ -12,8 +11,8 @@ from collective.xmpp.core.interfaces import IXMPPSettings
 from collective.xmpp.core.interfaces import IProductLayer
 from collective.xmpp.core.interfaces import IZopeReactor
 
-
 log = logging.getLogger(__name__)
+
 
 def createAdminClient(callback):
     registry = getUtility(IRegistry)
@@ -45,8 +44,10 @@ def setUpAdminClient(event):
 
         def checkAdminClientConnected(client):
             if client.state != 'authenticated':
-                log.warn('XMPP admin client has not been able to authenticate. ' \
-                    'Client state is "%s". Will retry on the next request.' % client.state)
+                log.warn(
+                    'XMPP admin client has not been able to authenticate. ' \
+                    'Client state is "%s". Will retry on the next request.' \
+                    % client.state)
                 gsm = getGlobalSiteManager()
                 gsm.unregisterUtility(client, IAdminClient)
 
